[package]
name = "Sylphide"
version = "0.1.0"
authors = ["Maeda Naoki <maeda.naoki.md9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies.cargo-husky]
version = "1.5.0"

[profile.release]
lto = true  # Enable Link time optimization
